# racing-agent-gymnasium

./: .gitignore  IDEA.md  Makefile  PLAN.md  RAPORT.html  RAPORT.md  README.md  pyproject.toml  requirements-kaggle.txt  requirements.txt
configs/: README.md  arch_deep_cnn.yaml  arch_light_cnn.yaml  arch_nature_cnn.yaml  hp_baseline.yaml  hp_high_lr.yaml  hp_large_batch.yaml  kaggle_overrides.yaml
docs/: CarRacingDocumentation.txt  README.md  SACDocumentation.txt
kaggle/: README.md
models/: README.md
notebooks/: 01_environment_exploration.ipynb  02_kaggle_hp_sweep.ipynb  README.md
reports/: README.md
reports/figures/: eval_summary.json  eval_summary_seed02.json  timing_table.csv
scripts/: evaluate.py  export_kaggle_outputs.py  generate_report_figures.py  import_kaggle_outputs.py  kaggle_run_all.py  md_to_html.py  package_kaggle_bundle.py  plot_curves.py  record_video.py  run_experiment.py  train_single.py  watch_agent.py
src/racing_agent/: __init__.py
src/racing_agent/evaluation/: __init__.py  evaluator.py
src/racing_agent/policies/: __init__.py  custom_cnn.py  light_cnn.py  nature_cnn.py
src/racing_agent/training/: __init__.py  callbacks.py  hyperparams.py  train.py
src/racing_agent/utils/: __init__.py  io.py  plotting.py  seeding.py
tests/: test_env.py  test_evaluation.py  test_hyperparams.py  test_plotting.py  test_policies.py  test_smoke.py  test_training_smoke.py
